remove mono-fw source files

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -60,6 +60,7 @@ file.reference.material_javax.inject.jar=C:\\Users\\Jhon Melvin\\Documents\\NetB
 file.reference.material_jfoenix.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\material_jfoenix.jar
 file.reference.material_jfxrt.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\material_jfxrt.jar
 file.reference.material_retrolambda-2.0.6.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\material_retrolambda-2.0.6.jar
+file.reference.mono-fw.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\mono-fw\\dist\\mono-fw.jar
 file.reference.poi-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\poi-3.15.jar
 file.reference.poi-excelant-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\poi-excelant-3.15.jar
 file.reference.poi-ooxml-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\poi-ooxml-3.15.jar
@@ -110,7 +111,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.15.jar}:\
     ${file.reference.poi-ooxml-schemas-3.15.jar}:\
     ${file.reference.poi-scratchpad-3.15.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.mono-fw.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
