--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -156,7 +156,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=org.cict.EvaluationMain
+javafx.main.class=org.cict.MainApplication
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
