--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,6 +51,7 @@ file.reference.itext5-itext-pdfa-5.5.11.jar=C:\\Users\\Jhon Melvin\\Documents\\N
 file.reference.itext5-itext-xtra-5.5.11.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\itext_lib\\itext5-itext-xtra-5.5.11.jar
 file.reference.itext5-itextpdf-5.5.11.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\itext_lib\\itext5-itextpdf-5.5.11.jar
 file.reference.itext5-xmlworker-5.5.11.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\itext_lib\\itext5-xmlworker-5.5.11.jar
+file.reference.izumi-fx.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\izumi-fx\\dist\\izumi-fx.jar
 file.reference.material_core-8.0b8.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\material_core-8.0b8.jar
 file.reference.material_datafx-8.0b8.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\material_datafx-8.0b8.jar
 file.reference.material_flow-8.0b8.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\material_flow-8.0b8.jar
@@ -112,7 +113,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.15.jar}:\
     ${file.reference.poi-scratchpad-3.15.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.mono-fw.jar}
+    ${file.reference.mono-fw.jar}:\
+    ${file.reference.izumi-fx.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
