--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.apache_commons-validator-1.6.jar=C:\\Users\\Jhon Melvin\\Document
 file.reference.commons-collections4-4.1.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\commons-collections4-4.1.jar
 file.reference.controlsfx-8.40.12.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\controlsfx-8.40.12.jar
 file.reference.dom_jaxen-1.1.1.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\dom_jaxen-1.1.1.jar
+file.reference.guava-23.2-jre.jar=C:\\Users\\Jhon Melvin\\Downloads\\guava-23.2-jre.jar
 file.reference.hash_bcprov-ext-jdk15on-157.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\hash_bcprov-ext-jdk15on-157.jar
 file.reference.hib_antlr-2.7.7.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\hib_antlr-2.7.7.jar
 file.reference.hib_classmate-1.3.0.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\hib_classmate-1.3.0.jar
@@ -67,6 +68,7 @@ file.reference.poi-excelant-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeans
 file.reference.poi-ooxml-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\poi-ooxml-3.15.jar
 file.reference.poi-ooxml-schemas-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\poi-ooxml-schemas-3.15.jar
 file.reference.poi-scratchpad-3.15.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\poi-scratchpad-3.15.jar
+file.reference.reflections-0.9.10.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\reflections-0.9.10.jar
 file.reference.scenicView.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\scenicView.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Jhon Melvin\\Documents\\NetBeansProjects\\linked_lib\\poi\\xmlbeans-2.6.0.jar
 includes=**
@@ -114,7 +116,9 @@ javac.classpath=\
     ${file.reference.poi-scratchpad-3.15.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.mono-fw.jar}:\
-    ${file.reference.izumi-fx.jar}
+    ${file.reference.izumi-fx.jar}:\
+    ${file.reference.reflections-0.9.10.jar}:\
+    ${file.reference.guava-23.2-jre.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
