--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -115,10 +115,10 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.15.jar}:\
     ${file.reference.poi-scratchpad-3.15.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.mono-fw.jar}:\
     ${file.reference.izumi-fx.jar}:\
     ${file.reference.reflections-0.9.10.jar}:\
-    ${file.reference.guava-23.2-jre.jar}
+    ${file.reference.guava-23.2-jre.jar}:\
+    ${file.reference.mono-fw.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
