--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,12 @@
 		    <artifactId>reflections</artifactId>
 		    <version>0.9.11</version>
 		</dependency>
-		<dependency>
-		    <groupId>com.jfoenix</groupId>
-		    <artifactId>jfoenix</artifactId>
-		    <version>8.0.8</version>
-		</dependency>
+		
+<dependency>
+    <groupId>com.jfoenix</groupId>
+    <artifactId>jfoenix</artifactId>
+    <version>9.0.8</version>
+</dependency>
 
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
@@ -83,12 +84,19 @@
 		    <artifactId>itextpdf</artifactId>
 		    <version>5.5.13</version>
 		</dependency>
-		
+		<!--  
 		<dependency>
 		    <groupId>org.controlsfx</groupId>
 		    <artifactId>controlsfx</artifactId>
 		    <version>8.40.12</version>
 		</dependency>
+		-->
+		<dependency>
+    <groupId>org.controlsfx</groupId>
+    <artifactId>controlsfx</artifactId>
+    <version>11.0.0</version>
+</dependency>
+		
 		
 		<dependency>
 		    <groupId>commons-io</groupId>
@@ -121,6 +129,11 @@
 		</dependency>
 
 
+<dependency>
+    <groupId>org.mariadb.jdbc</groupId>
+    <artifactId>mariadb-java-client</artifactId>
+    <version>2.5.2</version>
+</dependency>
 
 
 
