--- a/extensions/mono-fw/pom.xml
+++ b/extensions/mono-fw/pom.xml
@@ -40,11 +40,20 @@
 		    <artifactId>reflections</artifactId>
 		    <version>0.9.11</version>
 		</dependency>
+		
+<!--
+ Only compatible with JFoenix 1.10.0
+ popup.show(message, "Close", lapse, event);
+ popup.prefWidthProperty().bind(container.widthProperty());
+-->
 <dependency>
     <groupId>com.jfoenix</groupId>
     <artifactId>jfoenix</artifactId>
-    <version>9.0.8</version>
+    <version>1.10.0</version>
 </dependency>
+
+
+
 
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
