--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,10 @@
 <dependency>
     <groupId>com.jfoenix</groupId>
     <artifactId>jfoenix</artifactId>
-    <version>9.0.8</version>
+    <version>1.10.0</version>
 </dependency>
+
+
 
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
@@ -64,12 +66,15 @@
 
 
 		<!-- LOCAL -->
+		<!-- 
 		<dependency>
 			<groupId>javafx</groupId>
 			<artifactId>jfxrt</artifactId>
 			<version>jdk1.8.0_231</version>
 			<scope>provided</scope>
 		</dependency>
+		 -->
+		
 		<dependency>
 			<groupId>com.melvinperello</groupId>
 			<artifactId>monofw</artifactId>
@@ -84,18 +89,21 @@
 		    <artifactId>itextpdf</artifactId>
 		    <version>5.5.13</version>
 		</dependency>
-		<!--  
-		<dependency>
-		    <groupId>org.controlsfx</groupId>
-		    <artifactId>controlsfx</artifactId>
-		    <version>8.40.12</version>
-		</dependency>
-		-->
-		<dependency>
+
+<!-- 
+FIX: ControlsFX Error: ControlsFX 8.40.9 requires at least Java Version 8 Update 40
+8.40.9 -> 8.40.14
+ -->
+<dependency>
     <groupId>org.controlsfx</groupId>
     <artifactId>controlsfx</artifactId>
-    <version>11.0.0</version>
+    <version>8.40.14</version>
 </dependency>
+
+
+
+
+
 		
 		
 		<dependency>
