added resource block in pom to included non .java files

--- a/extensions/mono-fw/pom.xml
+++ b/extensions/mono-fw/pom.xml
@@ -84,6 +84,16 @@
 
 
 	<build>
+	
+		<resources>
+			<resource>
+				<directory>src</directory>
+				<includes>
+					<include>**/*.css</include>
+				</includes>
+			</resource>
+		</resources>
+		
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
 		<plugins>
