--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -32,19 +32,18 @@ http {
     server {
         listen [::]:8080 default_server;
         listen 8080 default_server;
-        server_name _;
+        server_name cictmonoforms;
 
         sendfile off;
-
-        root /var/www/html;
-        index index.php index.html;
-
+	   root /var/www/html/cictmonoforms/;
+	   index index.php index.html;
+	   
         location / {
             # First attempt to serve request as file, then
             # as directory, then fall back to index.php
-            try_files $uri $uri/ /index.php?$query_string;
+            try_files $uri $uri/ /index.php?q=$uri&$args;
         }
-
+	   
         # Redirect server error pages to the static page /50x.html
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
@@ -81,6 +80,96 @@ http {
             include fastcgi_params;
             fastcgi_pass 127.0.0.1:9000;
         }
+    }
+    
+    server {
+        listen [::]:8081 default_server;
+        listen 8081 default_server;
+        server_name cictwebportal;
+
+        sendfile off;
+	   root /var/www/html/cictwebportal/public/;
+	   index index.php index.html index.htm;
+	   
+        location / {
+		try_files $uri $uri/ /index.php$is_args$args;
+	   }
+
+
+	   
+        # Redirect server error pages to the static page /50x.html
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /var/lib/nginx/html;
+        }
+
+        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+            fastcgi_index index.php;
+            include fastcgi_params;
+        }
+
+        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+            expires 5d;
+        }
+
+        # Deny access to . files, for security
+        location ~ /\. {
+            log_not_found off;
+            deny all;
+        }
+
+
+    }
+    
+    server {
+        listen [::]:8082 default_server;
+        listen 8082 default_server;
+        server_name linkedphpapi;
+
+        sendfile off;
+	   root /var/www/html/linked-php-api/public/;
+	   index index.php index.html index.htm;
+	   
+        location / {
+		try_files $uri $uri/ /index.php$is_args$args;
+	   }
+
+
+	   
+        # Redirect server error pages to the static page /50x.html
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /var/lib/nginx/html;
+        }
+
+        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+            fastcgi_index index.php;
+            include fastcgi_params;
+        }
+
+        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+            expires 5d;
+        }
+
+        # Deny access to . files, for security
+        location ~ /\. {
+            log_not_found off;
+            deny all;
+        }
+
+
     }
 
     # Include other server configs
