added docker instruction

--- a/extensions/cictwebportal/.env
+++ b/extensions/cictwebportal/.env
@@ -3,10 +3,10 @@ APP_ENV=local
 APP_KEY=base64:WL8ryQuHF9Bs2iL6DO8YagjNJY5vN7TI9DynoBLIFAw=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://windows.local
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=windows.local
 DB_PORT=3306
 DB_DATABASE=cictems
 DB_USERNAME=root
