--- a/extensions/linked-php-api/.env
+++ b/extensions/linked-php-api/.env
@@ -3,10 +3,10 @@ APP_ENV=local
 APP_KEY=base64:3XMI9jXw44CaDClSF06AnGRSBcXmHOwQe9aP6RTd4Y0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://windows.local
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=windows.local
 DB_PORT=3306
 DB_DATABASE=cictems
 DB_USERNAME=root
